--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,15 @@
-jdbc.driverClassName=org.sqlite.JDBC
-jdbc.url=jdbc\:sqlite\:data/crawler.s3db
-jdbc.username=
-jdbc.password=
+#jdbc.driverClassName=org.sqlite.JDBC
+#jdbc.url=jdbc\:sqlite\:data/crawler.s3db
+#jdbc.username=
+#jdbc.password=
+
+
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/crawler
+jdbc.username=root
+jdbc.password=root
+
+
 
 cpool.checkoutTimeout=5000
 cpool.minPoolSize=100
