--- a/.classpath
+++ b/.classpath
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java/persist"/>
+	<classpathentry kind="src" path="src/main/java/webservice"/>
 	<classpathentry kind="src" path="src/main/java/crawler"/>
 	<classpathentry kind="src" path="src/main/java/core"/>
 	<classpathentry kind="src" path="src/main/java/plugin"/>
 	<classpathentry kind="src" path="src/main/java/ui"/>
 	<classpathentry kind="src" path="src/main/java/base"/>
-	<classpathentry kind="src" path="src/main/java/webservice"/>
 	<classpathentry kind="src" path="src/main/resource"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_24"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
